# HowdyScreen

./: .gitignore  .gitmodules  AGENTS.md  API_REFERENCE.md  ARCHITECTURE.md  AUDIO_FIXES_SUMMARY.md  BUILD_STATUS.md  CLAUDE.md  CMakeLists.txt  CRITICAL_AUDIO_FIX.md  CRITICAL_AUDIO_FIXES_APPLIED.md  DEVELOPMENT_GUIDE.md  DEVELOPMENT_WORKFLOW.md  ENHANCED_ERROR_RECOVERY.md  ENHANCED_VAD_WAKE_WORD_IMPLEMENTATION.md  ESP32P4_HOWDYTTS_DEPLOYMENT_GUIDE.md  ESP32P4_HOWDYTTS_INTEGRATION_VALIDATION.md  ESP32P4_ROOM_CONFIGURATION_GUIDE.md  ESP32P4_WIFI_CONFIG.md  FINAL_WAVESHARE_PATTERN_FIX.md  GETTING_STARTED.md  HARDWARE_SETUP.md  HOWDYTTS_CONVERSATIONAL_SYSTEM.md  HOWDYTTS_INTEGRATION_COMPLETE.md  HOWDYTTS_INTEGRATION_GUIDE.md  HOWDYTTS_INTEGRATION_ROADMAP.md  HOWDYTTS_INTEGRATION_SUMMARY.md  I2C_DEBUG_UTILITIES_README.md  INTEGRATION_GUIDE.md  MICROPHONE_CODEC_FIX.md  PHASE1_SUCCESS.md  PHASE2_SUCCESS.md  PHASE3A_SUCCESS.md  PHASE3B_SUCCESS.md  PHASE3C_SUCCESS.md  PHASE3_ULTIMATE_SUCCESS.md  PHASE4B_VALIDATION_SUMMARY.md  PHASE5_PERFORMANCE_OPTIMIZATION_COMPLETE.md  PHASE6B_BSP_CODEC_INTEGRATION_COMPLETE.md  PHASE6C_COMPLETION_SUMMARY.md  (+26 more)
.claude/: settings.local.json
Research/: ESP32 Dual-Chip WiFi Integration_.txt  ESP32-P4 C6 WiFi Integration_.txt  ESP32-P4_Flashing_Troubleshooting_Plan.txt  RESEARCH_QUERY_WIFI_REMOTE.md  UpdatedPlan.md  esp32p4-display-diagnostic.md  esp32p4-display-fix.md
archive/main_variants/: howdy_bsp_test.c  howdy_display.c  howdy_display_basic.c  howdy_lvgl_test.c  howdy_main 2.c  howdy_main.c  howdy_simple.c
components/audio_processor/: CMakeLists.txt
components/audio_processor/include/: audio_interface_coordinator.h  audio_memory_buffer.h  audio_pipeline.h  audio_processor.h  continuous_audio_processor.h  dual_i2s_manager.h  enhanced_udp_audio.h  enhanced_vad.h  esp32_p4_wake_word.h  howdy_audio_coordinator.h  howdy_memory_optimization.h  i2c_debug_utils.h  stt_audio_handler.h  tts_audio_handler.h  tts_jitter_buffer.h  udp_audio_streamer.h  voice_activity_detector.h
components/audio_processor/src/: audio_interface_coordinator.c  audio_memory_buffer.c  audio_pipeline.c  audio_processor.c  continuous_audio_processor.c  dual_i2s_manager.c  enhanced_udp_audio.c  enhanced_vad.c  esp32_p4_wake_word.c  i2c_debug_utils.c  stt_audio_handler.c  tts_audio_handler.c  tts_jitter_buffer.c  udp_audio_streamer.c  voice_activity_detector.c
components/bsp/: esp32_p4_wifi6_touch_lcd_xc.c
components/howdytts_http_client/: CMakeLists.txt
components/service_discovery/: CMakeLists.txt
components/ui_manager/: CMakeLists.txt
components/ui_manager/images/: howdy_img_armraisehowdy.h  howdy_img_howdybackward.c  howdy_img_howdymidget.h  howdy_img_howdyright.c  howdy_img_howdyright.h  howdy_img_howdyright2.c
components/ui_manager/include/: ui_manager.h
components/ui_manager/src/: ui_manager.c
components/websocket_client/: CMakeLists.txt  README_HOWDYTTS_PROTOCOL.md
components/websocket_client/include/: esp32_p4_vad_feedback.h  howdytts_http_server.h  howdytts_network_integration.h  howdytts_protocol.h  howdytts_udp_stream.h  websocket_client.h
components/websocket_client/src/: esp32_p4_vad_feedback.c  howdytts_http_server.c  howdytts_network_integration.c  howdytts_protocol.c  howdytts_udp_stream.c  websocket_client.c
components/wifi_manager/: CMakeLists.txt
components/wifi_manager/include/: wifi_manager.h
main/: CMakeLists.txt  Kconfig.projbuild  audio_pipeline.c  audio_stream_test.c  backlight_test.c  direct_lcd_test.c  display_bsp_test.c  display_init.c  display_init.h  display_manager.c  display_manager.h  error_recovery.c  error_recovery.h  hardware_diagnostic.c  howdy_basic_integration.c  howdy_config.h  howdy_display_basic.c  howdy_display_test.c  howdy_display_working.c  howdy_dual_protocol_integration.c  howdy_integrated.c  howdy_integration_test.c  howdy_minimal_integration.c  howdy_phase2_test.c  howdy_phase3b_display_test.c  howdy_phase3b_websocket.c  howdy_phase4_audio_interface.c  howdy_phase4_audio_interface.h  howdy_phase5_voice_assistant.c  howdy_phase6_howdytts_integration.c  howdy_voice_assistant_main.c  howdy_wifi_integration.c  howdy_wifi_integration.h  howdytts_client.c  howdytts_client.h  howdytts_integration.c  howdytts_integration.h  i2c_diagnostic_example.c  i2c_diagnostic_example.h  idf_component.yml  (+20 more)
main/assets/: convert_gif_to_c.py  howdy64_gif.c  howdy64_gif.h
main/images/: howdy_images.h  howdy_img_armraisehowdy.c  howdy_img_howdybackward.h  howdy_img_howdyleft.c  howdy_img_howdyleft.h  howdy_img_howdymidget.c  howdy_img_howdyright2.h
tools/: README.md  convert_images.py  convert_images_to_lvgl.py  howdytts_test_server.py  requirements.txt  run_test_server.sh  test_server.sh  validate_bidirectional_audio.py
(+6 files in other folders)
